WIP - Monitoring and cluster working. No "discovery" yet.

--- a/deploy/crd/trinocluster.crd.yaml
+++ b/deploy/crd/trinocluster.crd.yaml
@@ -46,6 +46,11 @@ spec:
                         ioTrino:
                           nullable: true
                           type: string
+                        metricsPort:
+                          format: uint16
+                          minimum: 0.0
+                          nullable: true
+                          type: integer
                         nodeDataDir:
                           nullable: true
                           type: string
@@ -99,6 +104,11 @@ spec:
                               ioTrino:
                                 nullable: true
                                 type: string
+                              metricsPort:
+                                format: uint16
+                                minimum: 0.0
+                                nullable: true
+                                type: integer
                               nodeDataDir:
                                 nullable: true
                                 type: string
@@ -200,6 +210,11 @@ spec:
                         ioTrino:
                           nullable: true
                           type: string
+                        metricsPort:
+                          format: uint16
+                          minimum: 0.0
+                          nullable: true
+                          type: integer
                         nodeDataDir:
                           nullable: true
                           type: string
@@ -253,6 +268,11 @@ spec:
                               ioTrino:
                                 nullable: true
                                 type: string
+                              metricsPort:
+                                format: uint16
+                                minimum: 0.0
+                                nullable: true
+                                type: integer
                               nodeDataDir:
                                 nullable: true
                                 type: string
