--- a/examples/simple-trino-cluster.yaml
+++ b/examples/simple-trino-cluster.yaml
@@ -17,6 +17,10 @@ spec:
         config:
           coordinator: true
           nodeId: "ffffffff-ffff-ffff-ffff-ffffffffffff"
+          nodeDataDir: /tmp/trino/data
+          metricsPort: 10200
+          httpServerHttpPort: 8080
+          discoveryUri: http://localhost:8080
   workers:
     roleGroups:
       default:
@@ -31,3 +35,7 @@ spec:
         replicas: 1
         config:
           nodeId: "ffffffff-ffff-ffff-ffff-fffffffffffe"
+          nodeDataDir: /tmp/trino/data2
+          metricsPort: 10201
+          httpServerHttpPort: 8081
+          discoveryUri: http://localhost:8080
