--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/stackabletech/trino-operator"
 version = "0.1.0-nightly"
 
 [dependencies]
-product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.1.0" }
+product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
 
 duplicate = "0.3.0"
