--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.1.0-nightly"
 
 [dependencies]
 product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
+stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", branch = "hackathon" }
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
 
 duplicate = "0.3.0"
