WIP - removed hardcoded hive configmap code

--- a/examples/simple-trino-cluster.yaml
+++ b/examples/simple-trino-cluster.yaml
@@ -16,8 +16,7 @@ spec:
             - operator: In
               key: kubernetes.io/hostname
               values:
-                #- main-1.stackable.demo
-                - mdesktop
+                - main-1.stackable.demo
         config:
           coordinator: true
           nodeDataDir: /tmp/trino/data
@@ -32,10 +31,9 @@ spec:
             - operator: In
               key: kubernetes.io/hostname
               values:
-                #- worker-1.stackable.demo
-                #- worker-2.stackable.demo
-                #- worker-3.stackable.demo
-                - mdesktop
+                - worker-1.stackable.demo
+                - worker-2.stackable.demo
+                - worker-3.stackable.demo
         replicas: 1
         config:
           nodeDataDir: /tmp/trino/data2
