WIP password.db gets written now

--- a/deploy/config-spec/properties.yaml
+++ b/deploy/config-spec/properties.yaml
@@ -179,6 +179,52 @@ properties:
           required: true
       asOfVersion: "0.0.0"
 
+  - property: &httpServerAuthenticationType
+      propertyNames:
+        - name: "http-server.authentication.type"
+          kind:
+            type: "file"
+            file: "config.properties"
+      datatype:
+        type: "string"
+      roles:
+        - name: "coordinator"
+          required: false
+      asOfVersion: "0.0.0"
+
+###################################################################################################
+# password-authenticator.properties
+###################################################################################################
+
+  - property: &passwordAuthenticatorName
+      propertyNames:
+        - name: "password-authenticator.name"
+          kind:
+            type: "file"
+            file: "password-authenticator.properties"
+      datatype:
+        type: "string"
+      allowedValues:
+        - "file"
+      roles:
+        - name: "coordinator"
+          required: false
+      asOfVersion: "0.0.0"
+
+  - property: &passwordAuthenticatorName
+      propertyNames:
+        - name: "file.password-file"
+          kind:
+            type: "file"
+            file: "password-authenticator.properties"
+      datatype:
+        type: "string"
+      roles:
+        - name: "coordinator"
+          required: false
+      asOfVersion: "0.0.0"
+
+
 ###################################################################################################
 # jvm.config
 ###################################################################################################
